--- a/Styles/style.css
+++ b/Styles/style.css
@@ -46,3 +46,17 @@
     color: white;
     padding: 0.8rem 1rem;
 }
+
+.trusted-badge {
+    width: 20%;
+    margin-top: -110px;
+    margin-left: 370px;
+}
+
+.trusted-badge-shadow {
+    width: 20%;
+    margin-top: -108px;
+    margin-left: 372px;
+    opacity: 100%;
+    
+}
